llvm-toolchain-snapshot (1:14~++20210827020436+15b2a8e7faf6-1~exp2) UNRELEASED; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind-X.Y{-dev} packages on sparc and sparc64

  [ Sylvestre Ledru ]
  * Ship clang-repl
    See https://reviews.llvm.org/D106813

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 31 Aug 2021 22:17:35 +0200

llvm-toolchain-snapshot (1:14~++20210827071740+3ec634e65a02-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * experimental New snapshot release
  * remove "scan-build-py-force-utf-8-opening.diff"
    merged upstream
  * Also install libomptarget-nvptx in libomp-X.Y-dev next to amdgcn
  * Upload the various changes from 12 & 13
  * remove "scan-build-py-force-utf-8-opening.diff"
    merged upstream
  * Also install libomptarget-nvptx in libomp-X.Y-dev next to amdgcn

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind on m68k, sparc64 and x32

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 27 Aug 2021 21:56:14 +0200

llvm-toolchain-snapshot (1:14~++20210827020436+15b2a8e7faf6-1~exp2) UNRELEASED; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind-X.Y{-dev} packages on sparc and sparc64

 -- John Paul Adrian Glaubitz <glaubitz@physik.fu-berlin.de>  Sun, 29 Aug 2021 21:28:50 +0200

llvm-toolchain-13 (1:13.0.0~+rc2-1) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind on m68k, sparc64 and x32

  [ Gianfranco Costamagna ]
  * integration-test-suite-test: fix build by using 13 as default version

  [ Sylvestre Ledru ]
  * New testing release

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 27 Aug 2021 09:43:28 +0200

llvm-toolchain-snapshot (1:14~++20210715093511+afc760ef3527-1~exp2) unstable; urgency=medium

  * revert the s390 as it is probably fixed
  * Rename some lld libs. Following 7a6482216ff02f81ed02ff4936f1b22d4b5a9a6c
    lldMachO=>lldMachOOld and lldMachO2=>lldMach
  * scan-build-py - Force the file open in utf-8. Fails on -14 on bionic
    otherwise