@@ -32,6 +32,7 @@ usr/lib/llvm-@LLVM_VERSION@/bin/pp-trace
 usr/lib/llvm-@LLVM_VERSION@/bin/clang-move
 usr/lib/llvm-@LLVM_VERSION@/bin/clang-offload-wrapper
 usr/lib/llvm-@LLVM_VERSION@/bin/clang-repl
+usr/lib/llvm-@LLVM_VERSION@/bin/clang-nvlink-wrapper
 
 usr/lib/llvm-@LLVM_VERSION@/bin/analyze-build
 usr/lib/llvm-@LLVM_VERSION@/bin/intercept-build
@@ -92,3 +93,4 @@ usr/bin/clang-move-@LLVM_VERSION@
 usr/bin/pp-trace-@LLVM_VERSION@
 usr/bin/clang-offload-wrapper-@LLVM_VERSION@
 usr/bin/clang-repl-@LLVM_VERSION@
+usr/bin/clang-nvlink-wrapper-@LLVM_VERSION@
