@@ -4,8 +4,10 @@ llvm-toolchain-snapshot (1:14~++20210827020436+15b2a8e7faf6-1~exp2) UNRELEASED; 
   * Disable libunwind-X.Y{-dev} packages on sparc and sparc64
 
   [ Sylvestre Ledru ]
-  * Ship clang-repl
+  * Ship clang-repl as part of clang-tools-XX
     See https://reviews.llvm.org/D106813
+  * Ship clang-nvlink-wrapper as part of clang-tools-XX
+    See https://reviews.llvm.org/D108291
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 31 Aug 2021 22:17:35 +0200
 
